--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "preact": "^5.7.0",
     "preact-compat": "^3.16.0",
-    "preact-icons": "^2.2.5"
+    "preact-icons": "^2.2.5",
+    "slideout": "^1.0.1"
   },
   "scripts": {
     "start": "preact-scripts start",
